Fix site header sittenav items jumping on hover

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ body {
 
 .sitenav-item {
   margin-right: 30px;
+  border-bottom: 1px solid transparent;
 }
 .sitenav-item:last-child{
   margin-right: 0;
@@ -122,6 +123,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 22.5px */
+  border:2px dotted transparent;
 }
 .search-form-input:hover{
   border:2px dotted #222;
